--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "4store-api",
   "version": "1.0.0",
+  "description": "4 STORE Backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "pg": "^8.11.0",
-    "cors": "^2.8.5"
-  }
+    "pg": "^8.11.3",
+    "cors": "^2.8.5",
+    "basic-auth": "^2.0.1"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
